# paquito

./: .gitignore  README.md
arduino/bosquejo_control_movimiento/: Car.cpp  Car.h  bosquejo_control_movimiento.ino
camara/: cam2demo.py
old/: setup.md
old/camara/: difunde2.py  usuarioflujo.py
old/i2c/: i2c_move_car.py  i2ctest.py  webcami2c.py
old/movimiento/: bluetest.py  fastbluegametest.py  mecanum-pi-speed.py
old/red/bosquejo_tcp/: bosquejo_tcp.ino
pc/pcros_ws/src/camera_viewer/camera_viewer/: viewer_node.py
pc/pcros_ws/src/control_paquito/: setup.py
pc/pcros_ws/src/control_paquito/control_paquito/: ps_control_node.py
pc/pcros_ws/src/control_paquito/launch/: ps_control_launch.py
pc/red/: red.md
raspberry/herramientas/i2c/: i2ctest_smbus2.py
raspberry/ros_ws/: README.md
raspberry/ros_ws/src/paquito_raspberry_cpp/: CMakeLists.txt  package.xml
raspberry/ros_ws/src/paquito_raspberry_cpp/launch/: car_launch.py
raspberry/ros_ws/src/paquito_raspberry_cpp/src/: PWMConverter.cpp  car_velocity_subscriber.cpp  command_executor.cpp
raspberry/ros_ws/src/rpy_camera/: package.xml  setup.cfg  setup.py
raspberry/ros_ws/src/rpy_camera/rpy_camera/: camera_publisher.py
